--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body{
     width: 100vw;
-    background: rgb(219, 219, 219);
+    background: rgb(241, 240, 240);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,11 +57,93 @@ body{
 #intro{
     height: 265px;
     text-align: center;
-    padding-top: 60px;
+    padding-top: 50px;
+}
+#intro h1{
+    font-size: 1.7em;
+    letter-spacing: .5px;
+    margin-bottom: 20px;
+}
+#intro h3{
+    color: hsl(0, 0%, 60%);
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: .25px;
+    margin-bottom: 40px;
+}
+#btn{
+    display: flex;
+    justify-content: space-between;
+}
+#btp{
+    width: 200px;
+    height: 55px;
+    border: none;
+    background: hsl(176, 50%, 47%);
+    border-radius: 50px;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+}
+#bm{
+    width: 170px;
+    height: 55px;
+    border-radius: 50px;
+    background: hsl(0, 0%, 95%) url(images/icon-bookmark.svg) no-repeat;
+    border: none;
+    padding-left: 40px;
+    font-weight: 700;
+    font-size: 16px;
+    color: hsl(0, 0%, 48%);
 }
 #stats{
     height: 210px;
+    padding-top: 45px;
+}
+#nmbrs{
+    display: flex;
+}
+#stats h3{
+    color: hsl(0, 0%, 60%);
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: -10px;
+}
+#backed{
+    padding-right: 40px;
+    border-right: 1px solid hsl(0, 0%, 60%);
+}
+#backers{
+    padding: 0 85px 0 45px;
+    border-right: 1px solid hsl(0, 0%, 60%);
+}
+#days{
+    padding-left: 40px;
 }
 #about{
     height: 1195px;
+    padding: 45px;
+}
+#about h2{
+    font-size: 1.25em;
+    padding-bottom: 35px;
+}
+#about p{
+    line-height: 30px;
+    color: hsl(0, 0%, 60%);
+    padding-bottom: 40px;
+}
+.pledge{
+    border: 1px solid hsl(0, 0%, 60%);
+    border-radius: 10px;
+    margin-bottom: 25px;
+    padding: 40px 30px 30px 30px;
+}
+.pledge h2{
+    padding-bottom: 30px;
+    font-size: 1.1em;
+}
+.top{
+    display: flex;
+    justify-content: space-between;
 }
