--- a/style.css
+++ b/style.css
@@ -1,292 +1,276 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Commissioner', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
 }
-body{
-    width: 100vw;
-    background: rgb(241, 240, 240);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: hsl(230, 100%, 99%);
 }
-#home{
-    width: 1440px;
-    height: 2158px;
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1440px;
+  height: 100vh;
+  background: url(images/bg-pattern.svg) no-repeat;
 }
-#head{
-    height: 400px;
-    display: flex;
-    justify-content: space-between;
-    background: url(images/image-hero-desktop.jpg) no-repeat;
+#top {
+  text-align: center;
+  background: url(images/pattern-circles.svg) no-repeat;
+  background-position: 50% 0;
+}
+h1 {
+  color: hsl(227, 35%, 25%);
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+p {
+  font-size: 15px;
+  color: hsl(225, 20%, 60%);
+  margin-bottom: 90px;
+}
+#container {
+  width: 540px;
+  height: 395px;
+  background: white;
+  border-radius: 15px;
+  padding: 50px 40px 35px 40px;
+}
+#price {
+  display: flex;
+  justify-content: space-between;
+}
+h2 {
+  font-size: 15px;
+  color: hsl(225, 20%, 60%);
+  position: relative;
+  top: 10px;
+}
+#pageviews {
+  letter-spacing: 2px;
+}
+#valueViews {
+  width: 40px;
+}
+#month {
+  display: flex;
+}
+#month-mobile {
+  display: none;
+}
+
+/* switch */
+#switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+#switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slide {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 10px;
+}
+.slide:hover {
+  background: hsl(174, 86%, 45%);
+}
+
+.slide:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 4px;
+  bottom: 2.5px;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slide {
+  background-color: hsl(174, 86%, 45%);
+}
+
+input:checked + .slide:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+/* slider */
+.slider {
+  -webkit-appearance: none; /* Override default CSS styles */
+  appearance: none;
+  outline: none;
+  width: 100%;
+  height: 8px;
+  border-radius: 4px;
+  margin: 35px 0;
+  opacity: 0.7;
+  background: linear-gradient(
+    90deg,
+    hsl(224, 65%, 95%) 60%,
+    hsl(224, 65%, 95%) 60%
+  );
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: hsl(174, 86%, 45%) url(images/icon-slider.svg) no-repeat;
+  background-position: 50%;
+  border: none;
+}
+.slider::-moz-range-thumb {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: hsl(174, 86%, 45%) url(images/icon-slider.svg) no-repeat;
+  background-position: 50%;
+  border: none;
+}
+.slider:hover {
+  opacity: 1;
+}
+
+/* billing */
+#billing {
+  display: flex;
+  justify-content: right;
+}
+#billing p {
+  font-size: 12px;
+  padding-right: 10px;
+}
+#switch {
+}
+#discount {
+  color: hsl(15, 100%, 70%);
+  background: hsl(14, 92%, 95%);
+  width: 80px;
+  height: 20px;
+  border-radius: 10px;
+  font-size: 10px;
+  padding: 2.5px 5px;
+}
+hr {
+  border: 0.5px solid hsl(224, 65%, 95%);
+  opacity: 0.5;
+  width: 540px;
+  position: relative;
+  left: -40px;
+  top: -40px;
+}
+
+/* start trial */
+#start-trial {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+  position: relative;
+  top: -40px;
+}
+li {
+  list-style-type: none;
+  background: url(images/icon-check.svg) no-repeat;
+  background-position: 0 50%;
+  padding-left: 30px;
+  font-size: 13px;
+  line-height: 25px;
+  color: hsl(225, 20%, 60%);
+}
+button {
+  width: 165px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  background: hsl(227, 35%, 25%);
+  color: hsl(226, 100%, 87%);
+  align-self: center;
+}
+button:hover {
+  color: white;
+}
+
+@media only screen and (max-width: 375px) {
+  body {
+    max-width: 375px;
+  }
+  #main {
+    width: 375px;
+    height: 800px;
     background-size: cover;
-    padding: 45px 165px 0 165px;
-}
-#logo{
-    background: url(images/logo.svg) no-repeat;
-    background-size: contain;
-    width: 125px;
-    height: 25px;
-}
-#head a{
-    color: white;
-    text-decoration: none;
-    padding-left: 30px;
-    font-size: 15px;
-}
-#head a:hover{
-    opacity: .8;
-}
-/* intro */
-#main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    top: -90px;
-}
-#intro, #stats, #about{
-    width: 730px;
-    background: white;
-    border-radius: 10px;
-    padding-left: 45px;
-    padding-right: 45px;
-    margin-bottom: 25px;
-}
-#intro{
-    height: 265px;
-    text-align: center;
-    padding-top: 50px;
-}
-#intro h1{
-    font-size: 1.7em;
-    letter-spacing: .5px;
-    margin-bottom: 20px;
-}
-#intro h3{
-    color: hsl(0, 0%, 60%);
-    font-weight: 400;
-    font-size: 16px;
-    letter-spacing: .25px;
-    margin-bottom: 40px;
-}
-#btn{
-    display: flex;
-    justify-content: space-between;
-}
-#btp{
-    width: 200px;
-    height: 55px;
-    border: none;
-    background: hsl(176, 50%, 47%);
-    border-radius: 50px;
-    color: white;
-    font-weight: 700;
-    font-size: 16px;
-}
-#bm{
-    width: 170px;
-    height: 55px;
-    border-radius: 50px;
-    background: hsl(0, 0%, 95%) url(images/icon-bookmark.svg) no-repeat;
-    border: none;
-    padding-left: 40px;
-    font-weight: 700;
-    font-size: 16px;
-    color: hsl(0, 0%, 48%);
-}
-#stats{
-    height: 210px;
-    padding-top: 45px;
-}
-#nmbrs{
-    display: flex;
-}
-#stats h3{
-    color: hsl(0, 0%, 60%);
-    font-weight: 400;
-    font-size: 16px;
-    margin-top: -10px;
-}
-#backed{
-    padding-right: 40px;
-    border-right: 1px solid hsl(0, 0%, 60%);
-}
-#backers{
-    padding: 0 85px 0 45px;
-    border-right: 1px solid hsl(0, 0%, 60%);
-}
-#days{
-    padding-left: 40px;
-}
-#about{
-    height: 1195px;
-    padding: 45px;
-}
-#about h2{
-    font-size: 1.25em;
-    padding-bottom: 35px;
-}
-p{
-    line-height: 30px;
-    color: hsl(0, 0%, 60%);
-    padding-bottom: 40px;
-}
-.pledge{
-    height: 245px;
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 10px;
-    margin-bottom: 25px;
-    padding: 30px 30px 20px 30px;
-}
-.pledge h2{
-    padding-bottom: 30px;
-    font-size: 1.1em;
-}
-.pledge p{
-    padding-bottom: 20px;
-    line-height: 25px;
-}
-.top{
-    display: flex;
-    justify-content: space-between;
-}
-.price{
-    color: hsl(176, 50%, 47%);
-    font-size: 15px;
-    font-weight: 500;
-}
-.container{
-    display: flex;
-    justify-content: space-between;
-}
-.nmbr-left{
-    display: flex;
-}
-.nmbr-left p{
-    padding: 10px;
-}
-.btn-reward{
-    width: 150px;
-    height: 50px;
-    border-radius: 50px;
-    border: none;
-    background: hsl(176, 50%, 47%);
-    color: white;
-}
-.out-of-stock{
-    opacity: .5;
-}
-.out-of-stock button{
-    background:hsl(0, 0%, 60%);
-}
-/* modal */
-#modal{
-    width: 730px;
-    height: 905px;
-    max-height: 1000px;
-    background: white;
-    padding: 45px;
-    border-radius: 10px;
-    position: relative;
-    top: -1900px;
-    display: none;
-}
-.modal-selected{
-    height: 1000px;
-}
-#modal h2{
-    font-size: 1.25em;
-    padding-bottom: 35px;
-}
-.pledge-select{
-    display: flex;
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 10px;
-    height: 155px;
-    margin-bottom: 25px;
-    padding: 25px;
-}
-.pledge-select input{
-    width: 35px;
-    height: 35px;
-    margin-right: 25px;
-    color:hsl(176, 50%, 47%);
-}
-.select-item{
-    height: 250px;
-    border: 2px solid hsl(176, 50%, 47%);
-    border-radius: 10px;
-    margin-bottom: 25px;
-}
-.pledge-selected{
-    display: none;
-    justify-content: space-between;
-    padding: 0 25px 25px 25px;
-}
-input{
-    width: 100px;
-    height: 45px;
-    border-radius: 50px;
-    border: 2px solid hsl(176, 50%, 47%);
-    padding-left: 30px;
-    font-weight: 700;
-    color: black;
-}
-.pledge-selected button{
-    width: 100px;
-    height: 45px;
-    background: hsl(176, 50%, 47%);
-    color: white;
-    border: none;
-    border-radius: 50px;
-}
-.select-top{
-    display: flex;
-    font-size: 16px;
-    height: 35px;
-}
-span{
-    position: relative;
-    left: 190px;
-}
-
-.select-top p{
-    color:hsl(176, 50%, 47%);
-    position: relative;
-    top: -5px;
-    left: 20px;
-    font-weight: 500;
-}
-#success{
-    display: none;
-    flex-direction: column;
+  }
+  h1 {
+    font-size: 20px;
+    margin-top: 30px;
+  }
+  #top p {
+    padding: 0 60px;
+  }
+  #container {
+    width: 325px;
+    height: 475px;
+    padding: 30px 40px 35px 40px;
+  }
+  #price {
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
+  }
+  #pageviews {
+    grid-row: 1/2;
+  }
+  #slider {
+    grid-row: 2/3;
+  }
+  #month {
+    display: none;
+  }
+  #month-mobile {
+    display: flex;
+    padding: 0 100px;
+  }
+  #billing p {
+    font-size: 10px;
+  }
+  hr {
+    width: 325px;
+  }
+  #discount {
+    width: 40px;
+  }
+  #start-trial {
+    flex-direction: column;
     align-items: center;
-    width: 540px;
-    height: 450px;
-    background: white;
-    border-radius: 10px;
-    padding: 45px;
-    text-align: center;
-    position: relative;
-    top: -1700px;
-}
-#icon-success{
-    background: url(images/icon-check.svg) no-repeat;
-    width: 85px;
-    height: 85px;
-}
-
-#success button{
-    width: 105px;
-    height: 50px;
-    background: hsl(176, 50%, 47%);
-    color: white;
-    border: none;
-    border-radius: 50px;
-}
-#success h3{
-    margin-bottom: 20px;
+    justify-content: center;
+  }
+  ul {
+    margin-bottom: 30px;
+  }
 }
